--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=9090
 
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=PlantNest;encrypt=false;
 spring.datasource.username=sa
-spring.datasource.password=1111
+spring.datasource.password=A0942012507
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.implicit_naming_strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
