--- a/demo28/package.json
+++ b/demo28/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://d-themes.com/angular/molla/demo28",
   "scripts": {
     "ng": "ng",
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && ng serve -o --configuration=production ",
+    "start": "ng serve -o --configuration=production --port=4300",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
