--- a/demo28/package.json
+++ b/demo28/package.json
@@ -56,7 +56,8 @@
     "tslib": "2.3.1",
     "web-animations-js": "^2.3.2",
     "webpack": "5.36.2",
-    "zone.js": "0.11.4"
+    "zone.js": "0.11.4",
+    "@auth0/angular-jwt": "^5.1.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "12.0.0",
