--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 server.port=9090
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=PlantNest;encrypt=false;
-spring.datasource.username=sa
-spring.datasource.password=1111
+#spring.datasource.url=jdbc:mysql://localhost:3306/plantnest
+spring.datasource.url=jdbc:mysql://containers-us-west-120.railway.app:5621/railway
+spring.datasource.username=root
+spring.datasource.password=UKP4emhjzUG9z2Irv96Z
+
+
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.implicit_naming_strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.properties.hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
