--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 server.port=9090
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/plantnest
-spring.datasource.url=jdbc:mysql://containers-us-west-120.railway.app:5621/railway
+#for dev environment
+spring.datasource.url=jdbc:mysql://localhost:3306/plantnest
 spring.datasource.username=root
-spring.datasource.password=UKP4emhjzUG9z2Irv96Z
+spring.datasource.password=1111
+
+
+#for deploy environment
+#spring.datasource.url=jdbc:mysql://containers-us-west-120.railway.app:5621/railway
+#spring.datasource.username=root
+#spring.datasource.password=UKP4emhjzUG9z2Irv96Z
 
 
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
