--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.port=9090
 #for dev environment
-spring.datasource.url=jdbc:mysql://localhost:3306/plantnest
-spring.datasource.username=root
-spring.datasource.password=1111
+#spring.datasource.url=jdbc:mysql://localhost:3306/plantnest
+#spring.datasource.username=root
+#spring.datasource.password=1111
 
 
 #for deploy environment
-#spring.datasource.url=jdbc:mysql://containers-us-west-120.railway.app:5621/railway
-#spring.datasource.username=root
-#spring.datasource.password=UKP4emhjzUG9z2Irv96Z
+spring.datasource.url=jdbc:mysql://containers-us-west-151.railway.app:5929/railway
+spring.datasource.username=root
+spring.datasource.password=S8YcelpaVorpE8X5EYIK
 
 
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
