--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.port=9090
 #for dev environment
-#spring.datasource.url=jdbc:mysql://localhost:3306/plantnest
+#spring.datasource.url=jdbc:mysql://localhost:3306/railway
 #spring.datasource.username=root
 #spring.datasource.password=1111
 
 
 #for deploy environment
-spring.datasource.url=jdbc:mysql://containers-us-west-151.railway.app:5929/railway
+spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:45247/railway
 spring.datasource.username=root
-spring.datasource.password=S8YcelpaVorpE8X5EYIK
+spring.datasource.password=H2hbGF3feB-Ba26G33b2AfaGg62-6Fb1
 
 
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
